--- a/edit/title.html
+++ b/edit/title.html
@@ -418,7 +418,7 @@
                         <div class="_2m9wl hidden-md" style="">
                           <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
-                              <div class="_le6wlg">
+                              <div class="section-container">
                                 <div
                                   class="wrapper-full max__width dir dir-ltr"
                                   style="--maxWidth: 1120px"
@@ -450,7 +450,7 @@
                           </div>
                           <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
-                              <div class="_le6wlg">
+                              <div class="section-container">
                                 <div
                                   class="wrapper-full max__width dir dir-ltr"
                                   style="--maxWidth: 1120px"
@@ -483,7 +483,7 @@
                           </div>
                           <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
-                              <div class="_le6wlg">
+                              <div class="section-container">
                                 <div
                                   class="wrapper-full max__width dir dir-ltr"
                                   style="--maxWidth: 1120px"
