--- a/landing-pages/merchandising.html
+++ b/landing-pages/merchandising.html
@@ -24521,7 +24521,7 @@
                                   data-section-id="PAGE_FOOTER"
                                 >
                                   <div class="page-footer__wrapper dir dir-ltr">
-                                    <div class="_le6wlg">
+                                    <div class="section-container">
                                       <div
                                         class="wrapper-full section-layout-width dir dir-ltr"
                                         style="--maxWidth: 1120px"
