--- a/listings-product/contact-host-message.html
+++ b/listings-product/contact-host-message.html
@@ -104,7 +104,7 @@
                                         <div
                                           style="--gp-section-max-width: 1120px"
                                         >
-                                          <div class="_le6wlg">
+                                          <div class="section-container">
                                             <div
                                               class="plmw1e5 mq5rv0q dir dir-ltr"
                                               style="--maxWidth: 1120px"
@@ -323,7 +323,7 @@
                                         <div
                                           style="--gp-section-max-width: 1120px"
                                         >
-                                          <div class="_le6wlg">
+                                          <div class="section-container">
                                             <div
                                               class="plmw1e5 mq5rv0q dir dir-ltr"
                                               style="--maxWidth: 1120px"
@@ -371,7 +371,7 @@
                                         <div
                                           style="--gp-section-max-width: 1120px"
                                         >
-                                          <div class="_le6wlg">
+                                          <div class="section-container">
                                             <div
                                               class="plmw1e5 mq5rv0q dir dir-ltr"
                                               style="--maxWidth: 1120px"
