--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -6945,7 +6945,7 @@
                                     </div>
                                     <div class="flex-before-after dir dir-ltr">
                                       <div style="--gp-section-max-width: 1120px">
-                                        <div class="_le6wlg">
+                                        <div class="section-container">
                                           <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth: 1120px">
                                             <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221)"></div>
                                             <div
@@ -13266,7 +13266,7 @@
                               --dls19-brand-color: var(--gray-900);
                             "
                           >
-                            <div class="_le6wlg">
+                            <div class="section-container">
                               <div
                                 class="plmw1e5 mq5rv0q dir dir-ltr"
                                 style="--maxWidth: 1120px"
@@ -14679,7 +14679,7 @@
                               --dls19-brand-color: var(--gray-900);
                             "
                           >
-                            <div class="_le6wlg">
+                            <div class="section-container">
                               <div
                                 class="plmw1e5 mq5rv0q dir dir-ltr"
                                 style="--maxWidth: 1120px"
@@ -16318,7 +16318,7 @@
                               --dls19-brand-color: var(--gray-900);
                             "
                           >
-                            <div class="_le6wlg">
+                            <div class="section-container">
                               <div
                                 class="plmw1e5 mq5rv0q dir dir-ltr"
                                 style="--maxWidth: 1120px"
@@ -16534,7 +16534,7 @@
                           data-section-id="AVAILABILITY_CALENDAR_DEFAULT">
                           <div class="_1rabovf" data-testid="modal-sheet-availability-calendar">
                             <div class="_yabr07">
-                              <div class="_le6wlg">
+                              <div class="section-container">
                                 <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
                                   <div>
                                     <div class="products-container__header-text-pb dir dir-ltr" style="--spacingBottom:0;">
@@ -17705,7 +17705,7 @@
                       <div style="--gp-section-max-width:1120px;">
                         <div data-plugin-in-point-id="BOOK_IT_CALENDAR_SHEET" data-section-id="BOOK_IT_CALENDAR_SHEET">
                           <div class="_1ylz08x">
-                            <div class="_le6wlg">
+                            <div class="section-container">
                               <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
                                 <div class="_9p0plx" data-testid="book-it-default">
                                   <div class="_754m05">
