--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -5190,7 +5190,7 @@
                               <div class="tab__content-visibility">
                                 <div>
                                   <div class="_1zeg3u">
-                                    <div class="_le6wlg">
+                                    <div class="section-container">
                                       <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth: 1120px">
                                         <div class="main-content__details-button-wrapper">
                                           <div class="flex-before-after dir dir-ltr">
@@ -19157,7 +19157,7 @@
                                   display: contents;
                                   --dls19-brand-color: var(--gray-900);
                                 ">
-                          <div class="_le6wlg">
+                          <div class="section-container">
                             <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth: 1120px">
                               <section>
                                 <div class="modal__items">
@@ -20093,7 +20093,7 @@
                                   display: contents;
                                   --dls19-brand-color: var(--gray-900);
                                 ">
-                          <div class="_le6wlg">
+                          <div class="section-container">
                             <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth: 1120px">
                               <section>
                                 <div class="modal__items" style="
@@ -21232,7 +21232,7 @@
                                   display: contents;
                                   --dls19-brand-color: var(--gray-900);
                                 ">
-                          <div class="_le6wlg">
+                          <div class="section-container">
                             <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth: 1120px">
                               <section>
                                 <div class="modal__items">
@@ -21464,7 +21464,7 @@
                                           --computedTopLargeAndAbove: 0;
                                         ">
                                       <div class="flex-before-after dir dir-ltr" style="">
-                                        <div class="_le6wlg">
+                                        <div class="section-container">
                                           <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth: 1120px">
                                             <section>
                                               <div class="bk5zv5c b1w3s95i pxj7xmk dir dir-ltr" style="
@@ -27921,7 +27921,7 @@
                             data-section-id="AVAILABILITY_CALENDAR_DEFAULT">
                             <div class="_1rabovf" data-testid="modal-sheet-availability-calendar">
                               <div class="_yabr07">
-                                <div class="_le6wlg">
+                                <div class="section-container">
                                   <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
                                     <div>
                                       <div class="products-container__header-text-pb dir dir-ltr" style="--spacingBottom:0;">
@@ -29210,7 +29210,7 @@
                           <div data-plugin-in-point-id="BOOK_IT_CALENDAR_SHEET"
                             data-section-id="BOOK_IT_CALENDAR_SHEET">
                             <div class="_1ylz08x">
-                              <div class="_le6wlg">
+                              <div class="section-container">
                                 <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
                                   <div class="_9p0plx" data-testid="book-it-default">
                                     <div class="_754m05">
