--- a/loaders/products-loader.html
+++ b/loaders/products-loader.html
@@ -6896,7 +6896,7 @@
                                   <div class="bk5zv5c b1w3s95i pxj7xmk dir dir-ltr"
                                     style="--computedBottom:4; --computedTop:0; --computedBottomMediumAndAbove:6; --computedBottomLargeAndAbove:6; --computedTopMediumAndAbove:0; --computedTopLargeAndAbove:0;">
                                     <div class="flex-before-after dir dir-ltr" style="">
-                                      <div class="_le6wlg">
+                                      <div class="section-container">
                                         <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth:1120px;">
                                           <section>
                                             <div class="bk5zv5c b1w3s95i pxj7xmk dir dir-ltr"
