--- a/online-experience/insights.html
+++ b/online-experience/insights.html
@@ -238,7 +238,7 @@
                   <main id="site-content">
                     <div class="flex-before-after dir dir-ltr" style="">
                       <div style="--gp-section-max-width: 1120px">
-                        <div class="_le6wlg">
+                        <div class="section-container">
                           <div
                             class="wrapper-full max__width dir dir-ltr"
                             style="--maxWidth: 1120px"
@@ -269,7 +269,7 @@
                     </div>
                     <div class="flex-before-after dir dir-ltr" style="">
                       <div style="--gp-section-max-width: 1120px">
-                        <div class="_le6wlg">
+                        <div class="section-container">
                           <div
                             class="wrapper-full max__width dir dir-ltr"
                             style="--maxWidth: 1120px"
@@ -1289,7 +1289,7 @@
                     </div>
                     <div class="flex-before-after dir dir-ltr" style="">
                       <div style="--gp-section-max-width: 1120px">
-                        <div class="_le6wlg">
+                        <div class="section-container">
                           <div
                             class="wrapper-full max__width dir dir-ltr"
                             style="--maxWidth: 1120px"
@@ -1369,7 +1369,7 @@
                           data-section-id="EXPERIENCES_HOST_INSIGHTS_STANDARDS"
                           style="padding-top: 8px; padding-bottom: 8px"
                         >
-                          <div class="_le6wlg">
+                          <div class="section-container">
                             <div
                               class="wrapper-full max__width dir dir-ltr"
                               style="--maxWidth: 1120px"
@@ -1492,7 +1492,7 @@
                     </div>
                     <div class="flex-before-after dir dir-ltr" style="">
                       <div style="--gp-section-max-width: 1120px">
-                        <div class="_le6wlg">
+                        <div class="section-container">
                           <div
                             class="wrapper-full max__width dir dir-ltr"
                             style="--maxWidth: 1120px"
