--- a/payments/payment.html
+++ b/payments/payment.html
@@ -302,7 +302,7 @@
                                       <div
                                         style="--gp-section-max-width: 1120px"
                                       >
-                                        <div class="_le6wlg">
+                                        <div class="section-container">
                                           <div
                                             class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
@@ -505,7 +505,7 @@
                                       <div
                                         style="--gp-section-max-width: 1120px"
                                       >
-                                        <div class="_le6wlg">
+                                        <div class="section-container">
                                           <div
                                             class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
@@ -551,7 +551,7 @@
                                       <div
                                         style="--gp-section-max-width: 1120px"
                                       >
-                                        <div class="_le6wlg">
+                                        <div class="section-container">
                                           <div
                                             class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
@@ -638,7 +638,7 @@
                                             );
                                           "
                                         ></div>
-                                        <div class="_le6wlg">
+                                        <div class="section-container">
                                           <div
                                             class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
@@ -673,7 +673,7 @@
                                       <div
                                         style="--gp-section-max-width: 1120px"
                                       >
-                                        <div class="_le6wlg">
+                                        <div class="section-container">
                                           <div
                                             class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
@@ -727,7 +727,7 @@
                                       <div
                                         style="--gp-section-max-width: 1120px"
                                       >
-                                        <div class="_le6wlg">
+                                        <div class="section-container">
                                           <div
                                             class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
@@ -796,7 +796,7 @@
                                             );
                                           "
                                         ></div>
-                                        <div class="_le6wlg">
+                                        <div class="section-container">
                                           <div
                                             class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
@@ -831,7 +831,7 @@
                                       <div
                                         style="--gp-section-max-width: 1120px"
                                       >
-                                        <div class="_le6wlg">
+                                        <div class="section-container">
                                           <div
                                             class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
@@ -943,7 +943,7 @@
                                             );
                                           "
                                         ></div>
-                                        <div class="_le6wlg">
+                                        <div class="section-container">
                                           <div
                                             class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
@@ -978,7 +978,7 @@
                                       <div
                                         style="--gp-section-max-width: 1120px"
                                       >
-                                        <div class="_le6wlg">
+                                        <div class="section-container">
                                           <div
                                             class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
@@ -1081,7 +1081,7 @@
                                             );
                                           "
                                         ></div>
-                                        <div class="_le6wlg">
+                                        <div class="section-container">
                                           <div
                                             class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
@@ -1176,7 +1176,7 @@
                                       <div
                                         style="--gp-section-max-width: 1120px"
                                       >
-                                        <div class="_le6wlg">
+                                        <div class="section-container">
                                           <div
                                             class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
@@ -1229,7 +1229,7 @@
                                             );
                                           "
                                         ></div>
-                                        <div class="_le6wlg">
+                                        <div class="section-container">
                                           <div
                                             class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
@@ -1278,7 +1278,7 @@
                                     <div class="flex-before-after dir dir-ltr">
                                       <div style="--gp-section-max-width:1120px;">
                                         <div class="_vl8fo3" style="border-top-color: rgb(235, 235, 235);"></div>
-                                        <div class="_le6wlg">
+                                        <div class="section-container">
                                           <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
                                             <div data-plugin-in-point-id="TITLE_ADDITIONAL_REQUIREMENT" data-section-id="TITLE_ADDITIONAL_REQUIREMENT"
                                               style="padding-top: 24px; padding-bottom: 24px;">
@@ -1294,7 +1294,7 @@
                                     </div>
                                     <div class="flex-before-after dir dir-ltr">
                                       <div style="--gp-section-max-width:1120px;">
-                                        <div class="_le6wlg">
+                                        <div class="section-container">
                                           <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
                                             <div data-plugin-in-point-id="FIRST_MESSAGE" data-section-id="FIRST_MESSAGE" style="padding-bottom: 24px;">
                                               <div id="required-first-message-section">
@@ -1317,7 +1317,7 @@
                                     </div>
                                     <div class="flex-before-after dir dir-ltr">
                                       <div style="--gp-section-max-width:1120px;">
-                                        <div class="_le6wlg">
+                                        <div class="section-container">
                                           <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
                                             <div data-plugin-in-point-id="PHONE_VERIFICATION" data-section-id="PHONE_VERIFICATION"
                                               style="padding-bottom: 24px;">
@@ -1339,7 +1339,7 @@
                                     </div>
                                     <div class="flex-before-after dir dir-ltr">
                                       <div style="--gp-section-max-width:1120px;">
-                                        <div class="_le6wlg">
+                                        <div class="section-container">
                                           <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
                                             <div data-plugin-in-point-id="PROFILE_PHOTO" data-section-id="PROFILE_PHOTO" style="padding-bottom: 24px;">
                                               <div class="_b7b6bk">
@@ -1371,7 +1371,7 @@
                                             );
                                           "
                                         ></div>
-                                        <div class="_le6wlg">
+                                        <div class="section-container">
                                           <div
                                             class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
@@ -1423,7 +1423,7 @@
                                       <div
                                         style="--gp-section-max-width: 1120px"
                                       >
-                                        <div class="_le6wlg">
+                                        <div class="section-container">
                                           <div
                                             class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
@@ -1512,7 +1512,7 @@
                                             );
                                           "
                                         ></div>
-                                        <div class="_le6wlg">
+                                        <div class="section-container">
                                           <div
                                             class="plmw1e5 mq5rv0q dir dir-ltr"
                                             style="--maxWidth: 1120px"
@@ -1755,7 +1755,7 @@
                                               235
                                             );
                                           "></div>
-                                        <div class="_le6wlg">
+                                        <div class="section-container">
                                           <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth: 1120px">
                                             <div data-plugin-in-point-id="LOGIN_PHONE_AUTH_FLOW" data-section-id="LOGIN_PHONE_AUTH_FLOW" style="
                                               padding-top: 32px;
