--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -421,7 +421,7 @@
                         <div class="_2m9wl hidden-md" style="">
                           <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
-                              <div class="_le6wlg">
+                              <div class="section-container">
                                 <div
                                   class="wrapper-full max__width dir dir-ltr"
                                   style="--maxWidth: 1120px"
@@ -456,7 +456,7 @@
                           </div>
                           <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
-                              <div class="_le6wlg">
+                              <div class="section-container">
                                 <div
                                   class="wrapper-full max__width dir dir-ltr"
                                   style="--maxWidth: 1120px"
@@ -492,7 +492,7 @@
                           </div>
                           <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
-                              <div class="_le6wlg">
+                              <div class="section-container">
                                 <div
                                   class="wrapper-full max__width dir dir-ltr"
                                   style="--maxWidth: 1120px"
