--- a/edit/bring.html
+++ b/edit/bring.html
@@ -420,7 +420,7 @@
                         <div class="_2m9wl hidden-md" style="">
                           <div class="flex-before-after dir dir-ltr" style="">
                             <div style="--gp-section-max-width: 1120px">
-                              <div class="_le6wlg">
+                              <div class="section-container">
                                 <div
                                   class="wrapper-full max__width dir dir-ltr"
                                   style="--maxWidth: 1120px"
@@ -455,7 +455,7 @@
                           </div>
                           <div class="flex-before-after dir dir-ltr" style="">
                             <div style="--gp-section-max-width: 1120px">
-                              <div class="_le6wlg">
+                              <div class="section-container">
                                 <div
                                   class="wrapper-full max__width dir dir-ltr"
                                   style="--maxWidth: 1120px"
