--- a/edit/photos.html
+++ b/edit/photos.html
@@ -258,7 +258,7 @@
                       <div class="_2m9wl hidden-md" style="">
                         <div class="flex-before-after dir dir-ltr">
                           <div style="--gp-section-max-width: 1120px">
-                            <div class="_le6wlg">
+                            <div class="section-container">
                               <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth: 1120px">
                                 <div data-plugin-in-point-id="HEADING_COMPACT" data-section-id="HEADING_COMPACT"
                                   style="padding-top: 12px">
@@ -278,7 +278,7 @@
                         </div>
                         <div class="flex-before-after dir dir-ltr">
                           <div style="--gp-section-max-width: 1120px">
-                            <div class="_le6wlg">
+                            <div class="section-container">
                               <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth: 1120px">
                                 <div data-plugin-in-point-id="STEP_SUBTITLE" data-section-id="STEP_SUBTITLE" style="
                                       padding-top: 8px;
@@ -304,7 +304,7 @@
                         </div>
                         <div class="flex-before-after dir dir-ltr">
                           <div style="--gp-section-max-width: 1120px">
-                            <div class="_le6wlg">
+                            <div class="section-container">
                               <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth: 1120px">
                                 <div data-plugin-in-point-id="COVER_HEADING" data-section-id="COVER_HEADING"
                                   style="padding-top: 16px">
@@ -323,7 +323,7 @@
                         </div>
                         <div class="flex-before-after dir dir-ltr">
                           <div style="--gp-section-max-width: 1120px">
-                            <div class="_le6wlg">
+                            <div class="section-container">
                               <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth: 1120px">
                                 <div data-plugin-in-point-id="COVER_SUBTITLE" data-section-id="COVER_SUBTITLE" style="
                                       padding-top: 16px;
@@ -349,7 +349,7 @@
                         </div>
                         <div class="flex-before-after dir dir-ltr">
                           <div style="--gp-section-max-width: 1120px">
-                            <div class="_le6wlg">
+                            <div class="section-container">
                               <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth: 1120px">
                                 <div data-plugin-in-point-id="COVER_PHOTO" data-section-id="COVER_PHOTO">
                                   <div class="account-container__menu-container">
@@ -463,7 +463,7 @@
                         </div>
                         <div class="flex-before-after dir dir-ltr">
                           <div style="--gp-section-max-width: 1120px">
-                            <div class="_le6wlg">
+                            <div class="section-container">
                               <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth: 1120px">
                                 <div data-plugin-in-point-id="GALLERY_HEADING" data-section-id="GALLERY_HEADING"
                                   style="padding-top: 32px">
@@ -482,7 +482,7 @@
                         </div>
                         <div class="flex-before-after dir dir-ltr">
                           <div style="--gp-section-max-width: 1120px">
-                            <div class="_le6wlg">
+                            <div class="section-container">
                               <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth: 1120px">
                                 <div data-plugin-in-point-id="GALLERY_SUBTITLE" data-section-id="GALLERY_SUBTITLE"
                                   style="
@@ -507,7 +507,7 @@
                         </div>
                         <div class="flex-before-after dir dir-ltr">
                           <div style="--gp-section-max-width: 1120px">
-                            <div class="_le6wlg">
+                            <div class="section-container">
                               <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth: 1120px">
                                 <div data-plugin-in-point-id="GALLERY_PHOTOS" data-section-id="GALLERY_PHOTOS">
                                   <div class="account-container__menu-container">
@@ -1407,7 +1407,7 @@
                         </div>
                         <div class="flex-before-after dir dir-ltr">
                           <div style="--gp-section-max-width: 1120px">
-                            <div class="_le6wlg">
+                            <div class="section-container">
                               <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth: 1120px">
                                 <div data-plugin-in-point-id="PHOTOS_PREVIEW" data-section-id="PHOTOS_PREVIEW"
                                   style="padding-top: 40px">
@@ -1695,7 +1695,7 @@
                         </div>
                         <div class="flex-before-after dir dir-ltr">
                           <div style="--gp-section-max-width: 1120px">
-                            <div class="_le6wlg">
+                            <div class="section-container">
                               <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth: 1120px">
                                 <div data-plugin-in-point-id="PHOTO_REQUIREMENTS" data-section-id="PHOTO_REQUIREMENTS"
                                   style="
