--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -1541,7 +1541,7 @@
                                     <div class="flex-before-after dir dir-ltr" style="">
 
 <div style="--gp-section-max-width: 1120px">
-  <div class="_le6wlg">
+  <div class="section-container">
     <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth: 1120px">
       <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221)"></div>
       <div
@@ -2437,7 +2437,7 @@
 <div class="flex-before-after dir dir-ltr">
 
 <div style="--gp-section-max-width: 1120px">
-  <div class="_le6wlg">
+  <div class="section-container">
     <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth: 1120px">
       <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221)"></div>
       <div
@@ -3177,7 +3177,7 @@
 <div class="flex-before-after dir dir-ltr" style="">
   <div style="--gp-section-max-width:1120px;">
     <div class="_vl8fo3" style="border-top-color: rgb(221, 221, 221);"></div>
-    <div class="_le6wlg">
+    <div class="section-container">
       <div class="wrapper-full section-layout-width dir dir-ltr" style="--maxWidth:1120px;">
         <div data-plugin-in-point-id="SIMILAR_EXPERIENCES" data-section-id="SIMILAR_EXPERIENCES"
           style="padding-top: 32px; padding-bottom: 32px;">
@@ -5306,7 +5306,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                   <div>                                    
                                     <div class="flex-before-after dir dir-ltr" style="">
                                       <div style="--gp-section-max-width:1120px;">
-                                        <div class="_le6wlg">
+                                        <div class="section-container">
                                           <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth:1120px;">
                                             <div data-plugin-in-point-id="BREADCRUMBS_DEFAULT"
                                               data-section-id="BREADCRUMBS_DEFAULT" style="padding-top: 32px;">
@@ -8587,7 +8587,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
 <!-- choose from available dates -->
 <div class="flex-before-after dir dir-ltr" style="">
   <div style="--gp-section-max-width:1120px;">
-    <div class="_le6wlg">
+    <div class="section-container">
       <div class="wrapper-full section-layout-width dir dir-ltr" style="--maxWidth:1120px;">
         <div class="contact-host__border-top-color" style="border-top-color: rgb(221, 221, 221);"></div>
         <div data-plugin-in-point-id="AVAILABILITY_EXPERIENCES" data-section-id="AVAILABILITY_EXPERIENCES"
@@ -8865,7 +8865,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
 
 <div class="flex-before-after dir dir-ltr" style="">
   <div style="--gp-section-max-width:1120px;">
-    <div class="_le6wlg">
+    <div class="section-container">
       <div class="wrapper-full section-layout-width dir dir-ltr" style="--maxWidth:1120px;">
         <div class="contact-host__border-top-color" style="border-top-color: rgb(221, 221, 221);"></div>
         <div data-plugin-in-point-id="POLICIES_EXPERIENCES" data-section-id="POLICIES_EXPERIENCES"
@@ -8948,7 +8948,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
   <div style="--gp-section-max-width:1120px">
     <div class="flex-before-after dir dir-ltr">
       <div style="--gp-section-max-width:1120px;">
-        <div class="_le6wlg">
+        <div class="section-container">
           <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
             <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
             
@@ -8962,7 +8962,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
 <!-- more online experiences -->
 <div class="flex-before-after dir dir-ltr" style="">
   <div style="--gp-section-max-width:1120px;">
-    <div class="_le6wlg">
+    <div class="section-container">
       <div class="wrapper-full section-layout-width dir dir-ltr" style="--maxWidth:1120px;">
         <div class="contact-host__border-top-color" style="border-top-color: rgb(221, 221, 221);"></div>
         <div data-plugin-in-point-id="SIMILAR_EXPERIENCES" data-section-id="SIMILAR_EXPERIENCES"
