--- a/listings-product/trips.html
+++ b/listings-product/trips.html
@@ -130,7 +130,7 @@
                         <div class="_1ynbv25">
                           <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1440px">
-                              <div class="_le6wlg">
+                              <div class="section-container">
                                 <div
                                   class="plmw1e5 mq5rv0q dir dir-ltr"
                                   style="--maxWidth: 1120px"
@@ -265,7 +265,7 @@
                           </div>
                           <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1440px">
-                              <div class="_le6wlg">
+                              <div class="section-container">
                                 <div
                                   class="plmw1e5 mq5rv0q dir dir-ltr"
                                   style="--maxWidth: 1120px"
@@ -300,7 +300,7 @@
                           </div>
                           <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1440px">
-                              <div class="_le6wlg">
+                              <div class="section-container">
                                 <div
                                   class="plmw1e5 mq5rv0q dir dir-ltr"
                                   style="--maxWidth: 1120px"
@@ -567,7 +567,7 @@
                           </div>
                           <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1440px">
-                              <div class="_le6wlg">
+                              <div class="section-container">
                                 <div
                                   class="plmw1e5 mq5rv0q dir dir-ltr"
                                   style="--maxWidth: 1120px"
