--- a/messaging/inbox.html
+++ b/messaging/inbox.html
@@ -2322,7 +2322,7 @@
                     <main id="site-content">
                       <div class="flex-before-after dir dir-ltr" style="">
                         <div style="--gp-section-max-width:1120px;">
-                          <div class="_le6wlg">
+                          <div class="section-container">
                             <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
                               <div id="filter-experiences-button" data-plugin-in-point-id="INBOX_FILTERS_LISTING" data-section-id="INBOX_FILTERS_LISTING" style="padding-top: 32px; padding-bottom: 32px;">
                                 <button type="button" class="link">
@@ -2347,7 +2347,7 @@
                       </div>
                       <div class="flex-before-after dir dir-ltr" style="">
                         <div style="--gp-section-max-width:1120px;">
-                          <div class="_le6wlg">
+                          <div class="section-container">
                             <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
                               <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);">
                               </div>
@@ -2458,7 +2458,7 @@
                       <main id="site-content">
                           <div class="flex-before-after dir dir-ltr">
                               <div style="--gp-section-max-width:1120px;">
-                                  <div class="_le6wlg">
+                                  <div class="section-container">
                                       <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
                                           <div data-plugin-in-point-id="INBOX_LISTING_PICKER"
                                               data-section-id="INBOX_LISTING_PICKER"
